fix alignment issues on settings scene

--- a/src/scenes/settings/components/Input/styles.scss
+++ b/src/scenes/settings/components/Input/styles.scss
@@ -6,6 +6,7 @@
     background-color: transparent;
     border: solid 1px grey;
     border-radius: 10px;
+    box-sizing: border-box;
 }
 
 .Input[type=number]::-webkit-inner-spin-button,
