--- a/src/scenes/settings/components/Menu/styles.scss
+++ b/src/scenes/settings/components/Menu/styles.scss
@@ -10,6 +10,7 @@
     background-color: transparent;
     border: solid 1px grey;
     border-radius: 10px;
+    box-sizing: border-box;
 }
 
 .menu-options {
