--- a/src/scenes/settings/styles.scss
+++ b/src/scenes/settings/styles.scss
@@ -34,7 +34,8 @@
 }
 
 .setting p {
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
     width: 100%;
 }
 
